--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
   },
   "dependencies": {
     "ignore": "^5.0.4"
-  }
+  },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/HCoban/codeowners.git"
+	}
 }
